# component-template

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  app.py  dev.py  example.py  package.json  publish_carousel.sh  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/replay-files/: template-reactless.json  template.json
.github/workflows/: build_deploy.yml  ci.yaml  e2e-tests.yaml  e2e_tests_on_call.yaml  lint_format.yml  prettier.yml  run-refresh-pipeline.yml  validate-component-definitions.yml
baseweb_components/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
baseweb_components/button/: __init__.py
baseweb_components/button/frontend/: package.json  tsconfig.json
baseweb_components/button/frontend/src/: Button.tsx  index.tsx
baseweb_components/components/: __init__.py
baseweb_components/components/button/public/: index.html
baseweb_components/components/button/src/: index.tsx
baseweb_components/components/modal/src/: Modal.tsx  index.tsx
baseweb_components/streamlit_baseweb/: __init__.py
baseweb_components/streamlit_baseweb/button/public/: index.html
baseweb_components/streamlit_baseweb/button/src/: Button.tsx  index.tsx
baseweb_components/streamlit_baseweb/modal/public/: index.html
baseweb_components/streamlit_baseweb/modal/src/: Modal.tsx  index.tsx
baseweb_components/streamlit_baseweb/navigation_bar/: package.json
baseweb_components/streamlit_baseweb/navigation_bar/src/: NavigationBar.tsx  index.tsx
bootstrap_carousel/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
bootstrap_carousel/.github/: dependabot.yml
bootstrap_carousel/streamlit_carousel/: __init__.py
bootstrap_carousel/streamlit_carousel/carousel/: package.json
bootstrap_carousel/streamlit_carousel/carousel/public/: index.html
bootstrap_carousel/streamlit_carousel/carousel/src/: Carousel.css  Carousel.js  Carousel.tsx  index.js  index.tsx
cookiecutter/: README.md  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py  pre_gen_project.py
cookiecutter/v2/: README.md  cookiecutter.json
cookiecutter/v2/{{ cookiecutter.package_name }}/: MANIFEST.in  README.md  example.py  pyproject.toml
cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/: __init__.py  pyproject.toml
cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/: package.json
cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/src/: MyComponent.tsx  index.tsx
cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/: package.json  tsconfig.json  vite.config.ts
cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/src/: index.ts
cookiecutter/{{ cookiecutter.package_name }}/: MANIFEST.in  README.md  setup.py
directory/: README.md  ranking_config.json
directory/compiled/: components.json
directory/components/: audio-recorder-streamlit.json  barfi.json  coinmarketcap-connection.json  elyra-streamlit-extension.json  extra-streamlit-components.json  hiplot.json  hydralit-components.json  msal-streamlit-authentication-dentro.json  msal-streamlit-authentication.json  multipage-streamlit.json  nlu.json  plost.json  pygwalker.json  spacy-streamlit.json  st-agraph-symrzknr.json  st-airtable-connection.json  st-annotated-text.json  st-ant-tree.json  st-btn-select.json  st-card-component.json  st-chat-message.json  st-click-detector.json  st-clickable-images.json  st-cockroachdb-connection.json  st-cytoscape.json  st-deta-connection.json  st-dynamodb-connection.json  st-echarts-events.json  st-execbox.json  st-files-connection.json  st-gsheets-connection.json  st-kaggle-connector.json  st-login-form.json  st-material-table.json  st-milvus-connection.json  st-mongo-connection.json  st-mui-multiselect.json  st-newsapi-connector.json  st-openai-embeddings-connection.json  st-pages.json  (+158 more)
directory/schemas/: compiled.schema.json  component.schema.json
streamlit-p5-source/: README.md  setup.py
streamlit_p5/: MANIFEST.in  README.md  __init__.py  example.py
template/: MANIFEST.in  README.md  setup.py
template-reactless/: README.md  example.py  setup.py
templates/v2/template/: MANIFEST.in  README.md  example.py  pyproject.toml
templates/v2/template/my_component/: __init__.py  pyproject.toml
templates/v2/template/my_component/frontend/: package.json  vite.config.ts
templates/v2/template/my_component/frontend/src/: index.tsx
work-tmp/: pr-139-review-threads.json
(+157 files in other folders)
