[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_baseweb"
version = "0.0.2"
description = "A Streamlit implementation of the Base Web library."
readme = "README.md"
authors = [{ name = "Thomas Bouamoud", email = "thomas.bouamoud@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "streamlit", "base web", "base-web", "base_web", "front end"]
dependencies = [
    "streamlit >= 0.63"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/thomasbs17/streamlit-contributions/tree/master/baseweb_components"

[project.scripts]
realpython = "reader.__main__:main"