[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_carousel"
version = "0.0.1"
description = "A Streamlit implementation of the React Bootstrap Carousel component."
readme = "README.md"
authors = [{ name = "Thomas Bouamoud", email = "thomas.bouamoud@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "streamlit", "react", "bootstrap", "carousel", "gallery"]
dependencies = [
    "streamlit >= 0.63"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/thomasbs17/streamlit-contributions/tree/master/bootstrap_carousel"

[project.scripts]
realpython = "reader.__main__:main"